After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 685004 - Last.fm profile page's toolbar is shown when not logged in.
Last.fm profile page's toolbar is shown when not logged in.
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: last.fm
HEAD
Other Linux
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-27 21:57 UTC by Jamie Nicol
Modified: 2012-11-04 13:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
audioscrobbler: only show toolbar when logged in (1.53 KB, patch)
2012-10-05 23:10 UTC, Jamie Nicol
committed Details | Review

Description Jamie Nicol 2012-09-27 21:57:08 UTC
It feels a bit odd.

I'll get a patch sorted, in the next few days hopefully.
Comment 1 Jamie Nicol 2012-10-05 23:10:23 UTC
Created attachment 225906 [details] [review]
audioscrobbler: only show toolbar when logged in
Comment 2 Jonathan Matthew 2012-10-21 07:48:47 UTC
Review of attachment 225906 [details] [review]:

I'm not entirely sure this is the right way to go, but it's your call.
Comment 3 Jamie Nicol 2012-10-21 15:08:46 UTC
Do you mean that we shouldn't hide the toolbar? or that there's a better way to hide it?

If the former, I'm inclined to commit because I really do think it looks wrong. We should at the very least grey out the buttons.

But if the latter, I'm happy to come up with a better patch if you point me in the right direction.
Comment 4 Jonathan Matthew 2012-10-21 21:16:23 UTC
I don't have any concrete ideas about what we should do instead, so let's do this.
Comment 5 Jamie Nicol 2012-11-04 13:13:06 UTC
Attachment 225906 [details] pushed as 1ca12fb - audioscrobbler: only show toolbar when logged in