audioscrobbler: only show toolbar when logged in

https://bugzilla.gnome.org/show_bug.cgi?id=685004